# yomikata

./: .gitattributes  .gitignore  LICENSE.md  MANIFEST.in  Makefile  README.md  app.py  downloads.json  pyproject.toml
requirements/: requirements-app.txt  requirements-dev.txt  requirements-inference.txt
yomikata/: __main__.py  dbert.py  dictionary.py  main.py  reader.py  utils.py
yomikata/config/: __init__.py  config.py  dbert-train-args.json  heteronyms.json  heteronyms_Sato2022.json
yomikata/dataset/: aozora.py  bccwj.py  kwdlc.py  ndlbib.py  pronunciations.py  repair_long_vowels.py  split.py  sudachi.py  unidic.py
yomikata/download/: download.py
